Update Recap page to #940

--- a/recap.html
+++ b/recap.html
@@ -7763,6 +7763,86 @@
                         <td align="left" valign="top">Located in Timmins, Ontario, the <a href="https://www.glencore.ca/en/kidd/" target="_blank">Kidd Creek Mine</a> is the world's deepest base-metal mine below sea level, with shaft bottom at 3014 metres.  Operating as the deepest operating metalliferous mine in the world, the mine has multiple winzes which connect the different levels. A winze is like a shaft that starts underground. Kidd Creek's depth is more than five times the height of Toronto's CN Tower!</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1862856223550275691" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">931</td>
+                        <td valign="top" align="center">Nov 30, 2024</td>
+                        <td valign="top" align="center"><strong>KNOLL</strong><br>🌄</td>
+                        <td align="center" valign="top">4.60</td>
+                        <td align="left" valign="top">Knolls are found throughout Canada, and the term generally refers to small, rounded hills or mounds that often create scenic viewpoints or unique natural features in the landscape. Knolls are a common geographical feature, especially in hilly or mountainous regions, and are present in various places across the country. High Knoll in Minnekhada Regional Park near Coquitlam, British Columbia, is a popular hiking destination with impressive views. Additionally, knoll-like formations appear in areas across Alberta and Ontario, adding character to the natural landscape and offering vantage points in parks and along hiking trails. Knolls can also be found in more northern areas of Canada where glacial activity historically shaped the terrain, leaving behind knolls, drumlins, and other geological features.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1863244184355783035" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">932</td>
+                        <td valign="top" align="center">Dec 1, 2024</td>
+                        <td valign="top" align="center"><strong>SYNOD</strong><br>⛪️✝️</td>
+                        <td align="center" valign="top">4.39</td>
+                        <td align="left" valign="top">A synod is a council or assembly in some Christian denominations to discuss and decide on matters of doctrine, administration, and other church affairs. In Canada, faith and religion play a significant role in the country's cultural mosaic. The Anglican and Lutheran churches in Canada often hold synods to guide their spiritual and organizational direction, reflecting their long-standing traditions within the country's diverse religious landscape. Canada’s religious diversity is reflected in the various synods and assemblies held by different Christian communities, contributing to the rich tapestry of beliefs and practices across the nation.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1863571102003232994" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">933</td>
+                        <td valign="top" align="center">Dec 2, 2024</td>
+                        <td valign="top" align="center"><strong>AXIAL</strong><br>🌊🌋</td>
+                        <td align="center" valign="top">5.07</td>
+                        <td align="left" valign="top">The Axial Seamount, an undersea volcano in the Pacific Ocean, influences the west coast's marine ecosystem. The Axial Seamount may sit off the coast of the United States, but it's still part of a unique underwater volcanic chain that Canada helps study! This active submarine volcano lies along the Juan de Fuca Ridge, a tectonic boundary just west of Vancouver Island. Canada's involvement in ocean research, particularly through programs like <a href="https://www.oceannetworks.ca/" target="_blank">Ocean Networks Canada</a>, helps monitor activity in the Axial Seamount and other geological features in the Pacific Ocean. The insights from this research help scientists understand undersea volcanic activity and potential impacts on the Canadian coast.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1863917865373487483" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">934</td>
+                        <td valign="top" align="center">Dec 3, 2024</td>
+                        <td valign="top" align="center"><strong>TETRA</strong><br>♿️🛠️🧑‍🦼</td>
+                        <td align="center" valign="top">4.52</td>
+                        <td align="left" valign="top">On December 3rd, the world observes the <a href="https://www.un.org/en/observances/day-of-persons-with-disabilities" target="_blank">International Day of Persons with Disabilities</a>, a day dedicated to promoting understanding and inclusion. The <a href="https://tetrasociety.org/" target="_blank">Tetra Society of North America</a> builds innovative solutions for people with physical disabilities to overcome environmental barriers, providing greater independence, quality of life, and inclusion. Founded in 1987 in Vancouver, British Columbia, by quadriplegic Sam Sullivan, the Tetra Society connects volunteer engineers and technicians with individuals needing custom assistive devices. These unique creations range from adapted wheelchairs to innovative tools that help people overcome everyday challenges. This non-profit organization exemplifies Canadian ingenuity and compassion, empowering individuals across the country to live with greater independence.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1864282412278046871" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">935</td>
+                        <td valign="top" align="center">Dec 4, 2024</td>
+                        <td valign="top" align="center"><strong>WHELP</strong><br>🦭</td>
+                        <td align="center" valign="top">4.43</td>
+                        <td align="left" valign="top">Canada's eastern coastlines, including the Gulf of St. Lawrence and the waters off Newfoundland and Labrador, are vital whelping grounds for harp seals each winter. Whelping, the term for giving birth to pups, takes place on the sea ice, which provides a safe environment for harp seal mothers to nurse their newborns. These iconic seals migrate south from the Canadian Arctic every fall, relying on stable ice conditions to raise their pups. The fluffy white coats of harp seal pups are a familiar sight in these regions, making whelping season a unique and cherished part of Canada’s Arctic and marine ecosystem.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1864646953847456015" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">936</td>
+                        <td valign="top" align="center">Dec 5, 2024</td>
+                        <td valign="top" align="center"><strong>JOUST</strong><br>⚔️🛡️🏰</td>
+                        <td align="center" valign="top">4.23</td>
+                        <td align="left" valign="top">In Canada, Medieval Festivals celebrate the rich history and excitement of the Middle Ages, with events such as jousting tournaments bringing history to life. One of the highlights is the Medieval Festival at Upper Canada Village, held annually in Ontario, where visitors can enjoy reenactments, medieval music, and live jousting competitions. Knights face off in thrilling jousts, demonstrating their horsemanship and combat skills. Another notable experience is <a href="https://www.medievaltimes.com/toronto" target="_blank">Medieval Times</a> in Toronto, which offers an immersive dinner theatre experience where guests can watch knights compete in jousting matches as part of a larger medieval spectacle. These events give Canadians the chance to experience the excitement and drama of medieval chivalry and jousting firsthand.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1865020557315526929" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">937</td>
+                        <td valign="top" align="center">Dec 6, 2024</td>
+                        <td valign="top" align="center"><strong>TEETH</strong><br>🤐</td>
+                        <td align="center" valign="top">4.06</td>
+                        <td align="left" valign="top">Did you know the humble zipper owes its "teeth" to Canadian ingenuity? In 1913, while working for the Universal Fastener Company, Gideon Sundback, a Swedish-born inventor who settled in St. Catharines, Ontario, developed the modern zipper we use today. His design - originally called the "Separable Fastener" - featured interlocking metal teeth that made it easy to open and close. Though small, this invention would go on to revolutionize fashion, camping gear, and much more. Next time you zip up, give a nod to Canada's history of clever creations!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1865387903095849096" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">938</td>
+                        <td valign="top" align="center">Dec 7, 2024</td>
+                        <td valign="top" align="center"><strong>GAUGE</strong><br>🌬️🎐💨</td>
+                        <td align="center" valign="top">4.74</td>
+                        <td align="left" valign="top">In Canada, we go big - even when it comes to measuring the wind! In Lethbridge, Alberta, you'll find the world's largest wind gauge, a unique roadside attraction that stands over 17 feet tall. Lethbridge is famous for its strong Chinook winds, so the towering gauge is a fitting tribute to the city's windy reputation. Next time you’re in southern Alberta, check out this quirky Canadian landmark and see if you can "gauge" just how gusty it is!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1865738060576575688" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">939</td>
+                        <td valign="top" align="center">Dec 8, 2024</td>
+                        <td valign="top" align="center"><strong>PUPPY</strong><br>🦎</td>
+                        <td align="center" valign="top">5.38</td>
+                        <td align="left" valign="top">The mudpuppy is Canada's largest salamander species. Found in southern Manitoba, Ontario, and Quebec, this unique creature spends its entire life underwater. Its feathery, dark red external gills are a striking feature and an adaptation to its aquatic lifestyle. Mudpuppies live at the bottoms of freshwater lakes, ponds, rivers, and streams, where they quietly play a vital role in their ecosystems by feeding on insects, small fish, and other invertebrates.  These fascinating creatures are an important and unique part of Canada's natural biodiversity!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1866088695251583241" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">940</td>
+                        <td valign="top" align="center">Dec 9, 2024</td>
+                        <td valign="top" align="center"><strong>SCUFF</strong><br>🕺🥳💃</td>
+                        <td align="center" valign="top">4.65</td>
+                        <td align="left" valign="top">In Newfoundland, a "scuff" is more than just a shuffle - it's a good old-fashioned casual dance where people come together to enjoy traditional music, tap their feet, and kick up their heels. These community gatherings are filled with lively tunes, often played on accordion and fiddle, and embody the friendly spirit of Newfoundland and Labrador. From small towns to city gatherings, a scuff remains a cherished way for locals to celebrate their heritage and share in joyful moments on Canada's eastern shores.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1866473660585796008" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -8807,6 +8887,17 @@
                   <tr><td align="center" valign="top">928</td><td align="center" valign="top"><strong>VIPER</strong></td></tr>
                   <tr><td align="center" valign="top">929</td><td align="center" valign="top"><strong>PYGMY</strong></td></tr>
                   <tr><td align="center" valign="top">930</td><td align="center" valign="top"><strong>WINZE</strong></td></tr>
+
+                  <tr><td align="center" valign="top">931</td><td align="center" valign="top"><strong>KNOLL</strong></td></tr>
+                  <tr><td align="center" valign="top">932</td><td align="center" valign="top"><strong>SYNOD</strong></td></tr>
+                  <tr><td align="center" valign="top">933</td><td align="center" valign="top"><strong>AXIAL</strong></td></tr>
+                  <tr><td align="center" valign="top">934</td><td align="center" valign="top"><strong>TETRA</strong></td></tr>
+                  <tr><td align="center" valign="top">935</td><td align="center" valign="top"><strong>WHELP</strong></td></tr>
+                  <tr><td align="center" valign="top">936</td><td align="center" valign="top"><strong>JOUST</strong></td></tr>
+                  <tr><td align="center" valign="top">937</td><td align="center" valign="top"><strong>TEETH</strong></td></tr>
+                  <tr><td align="center" valign="top">938</td><td align="center" valign="top"><strong>GAUGE</strong></td></tr>
+                  <tr><td align="center" valign="top">939</td><td align="center" valign="top"><strong>PUPPY</strong></td></tr>
+                  <tr><td align="center" valign="top">940</td><td align="center" valign="top"><strong>SCUFF</strong></td></tr>
 
                </tbody>
             </table>
