Update Recap page to #950

--- a/recap.html
+++ b/recap.html
@@ -7843,6 +7843,86 @@
                         <td align="left" valign="top">In Newfoundland, a "scuff" is more than just a shuffle - it's a good old-fashioned casual dance where people come together to enjoy traditional music, tap their feet, and kick up their heels. These community gatherings are filled with lively tunes, often played on accordion and fiddle, and embody the friendly spirit of Newfoundland and Labrador. From small towns to city gatherings, a scuff remains a cherished way for locals to celebrate their heritage and share in joyful moments on Canada's eastern shores.</td>
                         <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1866473660585796008" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
                      </tr>
+                     <tr>
+                        <td valign="top" align="center">941</td>
+                        <td valign="top" align="center">Dec 10, 2024</td>
+                        <td valign="top" align="center"><strong>FLUKE</strong><br>🐋</td>
+                        <td align="center" valign="top">4.37</td>
+                        <td align="left" valign="top">In the world of whale watching, a fluke refers to the tail of a whale, an awe-inspiring sight often visible as the whale dives beneath the surface. Canada is home to some of the best locations for spotting these spectacular flukes, especially in the Bay of Fundy, where humpback and minke whales are frequently seen. A whale's fluke, with its unique patterns and markings, is like a fingerprint, allowing researchers to identify individual whales. With over 12,000 whale sightings annually in the Bay of Fundy, catching a glimpse of a whale's fluke is not just a highlight - it's a quintessential Canadian coastal experience!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1866852181011222722" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">942</td>
+                        <td valign="top" align="center">Dec 11, 2024</td>
+                        <td valign="top" align="center"><strong>TANGO</strong><br>🎶🪗🌹</td>
+                        <td align="center" valign="top">4.31</td>
+                        <td align="left" valign="top">Did you know that Canada has a unique connection to the tango? While the dance originated in Argentina, it's celebrated worldwide, including on International Day of the Tango on December 11th! In Canada, tango thrives through organizations like <a href="https://pointetango.com/" target="_blank">PointeTango</a>, a Canadian dance company that combines traditional tango with ballet, bringing this iconic dance to new audiences. By pushing new boundaries in dance, PointeTango combines the intimacy of Argentine tango with the precision of classical ballet, creating a new dance vocabulary that is both intimate and bold.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1867189539103494533" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">943</td>
+                        <td valign="top" align="center">Dec 12, 2024</td>
+                        <td valign="top" align="center"><strong>KITTY</strong><br>💃🪙⛏️</td>
+                        <td align="center" valign="top">4.90</td>
+                        <td align="left" valign="top">During the Klondike Gold Rush, Kathleen "Klondike Kate" Rockwell, affectionately known as "Kitty," became one of the Yukon's most celebrated entertainers. Drawn by tales of fortune, Kitty arrived in Dawson City in 1900 and quickly found fame as a dancer. She dazzled packed saloons with her vaudeville routines, including her signature "Flame Dance," which transformed her red sequined dress and flowing chiffon into a fiery spectacle. A symbol of resilience and charm, Kitty brought joy and excitement to the often grueling lives of miners who had flocked to the north in search of gold. Kitty's name remains synonymous with the Klondike spirit, capturing the allure and larger-than-life characters that defined one of Canada's most legendary eras.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1867558932937412835" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">944</td>
+                        <td valign="top" align="center">Dec 13, 2024</td>
+                        <td valign="top" align="center"><strong>JEWEL</strong><br>💎</td>
+                        <td align="center" valign="top">5.05</td>
+                        <td align="left" valign="top">Looking for the biggest jewel in Canada? The town of Black Diamond, Alberta, is home to the world's largest black diamond! This striking monument was unveiled during the town's centennial Jubilee in 2007, paying homage to its namesake and rich coal mining history. Standing 1.22 metres wide and crafted from painted aluminum, the diamond is more than just a dazzling sight - it symbolizes the resilience and ingenuity of the community that once thrived on coal mining. On January 1, 2023, Black Diamond took on a new chapter in its history by amalgamating with its neighbour, Turner Valley, to form the town of Diamond Valley. Today, Diamond Valley is celebrated not only for its jewel, but also for its vibrant arts scene and stunning foothills views, making it a true gem of Alberta!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1867917419794088367" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">945</td>
+                        <td valign="top" align="center">Dec 14, 2024</td>
+                        <td valign="top" align="center"><strong>VODKA</strong><br>🍸🍅🍹</td>
+                        <td align="center" valign="top">4.95</td>
+                        <td align="left" valign="top">Canada has its fair share of quaff-worthy traditions, one of the most iconic being the Caesar. This Canadian-born cocktail, created in Calgary in 1969 by bartender Walter Chell, is a savoury mix of vodka, Clamato juice, hot sauce, and Worcestershire sauce, usually garnished with celery or lime. It's so beloved that Canadians drink an estimated 350 million Caesars each year, making it a true national treasure. Whether enjoyed at a gathering or a brunch, it's a drink that pairs perfectly with our distinctive Canadian flavour.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1868284551241281684" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">946</td>
+                        <td valign="top" align="center">Dec 15, 2024</td>
+                        <td valign="top" align="center"><strong>JIFFY</strong><br>🏡🛠️📱</td>
+                        <td align="center" valign="top">5.10</td>
+                        <td align="left" valign="top">Jiffy, Canada's #1 home maintenance app, has been revolutionizing how Canadians tackle their home maintenance since its launch in Toronto in 2015. The app connects homeowners with vetted local service professionals across over 20 categories, such as plumbing, electrical work, and painting. Its name reflects its core promise: connecting users with reliable pros in a jiffy! Since its inception, Jiffy has completed over 450,000 jobs and expanded to cities like Ottawa and Calgary.  This homegrown innovation has made managing home repairs easier from coast to coast!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1868642252475568522" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">947</td>
+                        <td valign="top" align="center">Dec 16, 2024</td>
+                        <td valign="top" align="center"><strong>PIXIE</strong><br>🌱🧚</td>
+                        <td align="center" valign="top">4.79</td>
+                        <td align="left" valign="top">Canada's forests are home to the enchanting pixie cup lichen, a tiny, moss-like species that adds a touch of whimsy to the landscape! These small, cup-shaped lichens - named for their resemblance to a pixie's drinking cup - can be found on decaying wood and forest floors across Canada. More than just cute, pixie cup lichen plays a key role in forest ecosystems, helping to break down organic matter and even absorb pollutants. Keep an eye out for these little wonders next time you're exploring a Canadian forest!</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1869005998737727815" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">948</td>
+                        <td valign="top" align="center">Dec 17, 2024</td>
+                        <td valign="top" align="center"><strong>ENVOY</strong><br><img src="images/recap/envoy.jpg"></td>
+                        <td align="center" valign="top">4.78</td>
+                        <td align="left" valign="top">Canada has a proud history of diplomacy and peacekeeping, often playing the role of envoy on the world stage. Canadians have been involved in key international missions as ambassadors, peacekeepers, and negotiators, striving to promote peace and collaboration globally. In fact, Canadian Lester B. Pearson, who served as an envoy in the United Nations, is credited with establishing the modern concept of peacekeeping and won the Nobel Peace Prize in 1957 for his efforts. Through its envoys, Canada has built a legacy of promoting unity, peace, and goodwill around the world - a true reflection of Canadian values.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1869359094303215759" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">949</td>
+                        <td valign="top" align="center">Dec 18, 2024</td>
+                        <td valign="top" align="center"><strong>CROON</strong><br>🤵🎤🎄</td>
+                        <td align="center" valign="top">4.42</td>
+                        <td align="left" valign="top">Canadian singer <a href="https://www.michaelbuble.com/" target="_blank">Michael Bublé</a> is one of today's most famous crooners, especially during the holiday season! Known for his smooth voice and charming style, Bublé has become a household name in Canada and beyond. His Christmas album, released in 2011, has become a holiday staple, with his renditions of classic carols bringing festive cheer to countless homes each year. From cozy fireside gatherings to holiday parties, Bublé's warm voice and timeless style have made him Canada's "King of Christmas," loved by fans who tune in every December to hear him croon their favourite holiday tunes.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1869720772823875632" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
+                     <tr>
+                        <td valign="top" align="center">950</td>
+                        <td valign="top" align="center">Dec 19, 2024</td>
+                        <td valign="top" align="center"><strong>VIXEN</strong><br>🦊</td>
+                        <td align="center" valign="top">4.74</td>
+                        <td align="left" valign="top">The term vixen refers to a female fox, known for its keen instincts and nimble movements. Foxes can be spotted throughout Canada, from the dense forests of British Columbia to the iconic red soil and rolling fields of Prince Edward Island. Fittingly, Santa also has a reindeer named Vixen, whose agility helps lead his team through the snowy skies on Christmas Eve. Like the fox namesakes in Canada, Vixen the reindeer brings a touch of magic and grace to the holiday season, reminding us of Canada's wild beauty and winter wonders from coast to coast.</td>
+                        <td valign="top" align="center"><a href="https://x.com/CanuckleGame/status/1870109931774656837" target="_blank"><img src="images/recap/twitter30.png" width=25 alt="Twitter" title="Twitter"></a></td>
+                     </tr>
 
 
 
@@ -8898,6 +8978,17 @@
                   <tr><td align="center" valign="top">938</td><td align="center" valign="top"><strong>GAUGE</strong></td></tr>
                   <tr><td align="center" valign="top">939</td><td align="center" valign="top"><strong>PUPPY</strong></td></tr>
                   <tr><td align="center" valign="top">940</td><td align="center" valign="top"><strong>SCUFF</strong></td></tr>
+
+                  <tr><td align="center" valign="top">941</td><td align="center" valign="top"><strong>FLUKE</strong></td></tr>
+                  <tr><td align="center" valign="top">942</td><td align="center" valign="top"><strong>TANGO</strong></td></tr>
+                  <tr><td align="center" valign="top">943</td><td align="center" valign="top"><strong>KITTY</strong></td></tr>
+                  <tr><td align="center" valign="top">944</td><td align="center" valign="top"><strong>JEWEL</strong></td></tr>
+                  <tr><td align="center" valign="top">945</td><td align="center" valign="top"><strong>VODKA</strong></td></tr>
+                  <tr><td align="center" valign="top">946</td><td align="center" valign="top"><strong>JIFFY</strong></td></tr>
+                  <tr><td align="center" valign="top">947</td><td align="center" valign="top"><strong>PIXIE</strong></td></tr>
+                  <tr><td align="center" valign="top">948</td><td align="center" valign="top"><strong>ENVOY</strong></td></tr>
+                  <tr><td align="center" valign="top">949</td><td align="center" valign="top"><strong>CROON</strong></td></tr>
+                  <tr><td align="center" valign="top">950</td><td align="center" valign="top"><strong>VIXEN</strong></td></tr>
 
                </tbody>
             </table>
