- Adding a second adbox_6

--- a/index.html
+++ b/index.html
@@ -390,6 +390,10 @@ if (/canucklegame.github.io/.test(window.location) === true) {
       <div class="ympb_target_companion" data-type="desktop-medrec-template" data-subtype="400x600">
       </div>
     </div>
+    <div class="adbox_6">
+      <div class="ympb_target_companion" data-type="desktop-medrec-template" data-subtype="400x600">
+      </div>
+    </div>
     <div class="game">
       <div class="loadingscreen" title="Canuckle Loading Screen">
         <div class="canuckle">
